GNOME Bugzilla – Bug 751867
omxvideodec: leak allocator after getting it from allocation query in RPi + GL case
Last modified: 2015-07-06 08:55:06 UTC
When target platform is RPi and with GL support enable, omxvideodec element leaks some allocator references when parsing allocation query in decide_allocation method.
Created attachment 306671 [details] [review] omxvideodec: unref allocator after getting it from allocation query Otherwise a reference will be leaked for each allocator. It only happens when target platform is Raspberry Pi and when we have GL support.
commit d2df0fb032c36b366a08a1355c4f4c816eb53447 Author: Aurélien Zanelli <aurelien.zanelli@darkosphere.fr> Date: Fri Jul 3 00:26:48 2015 +0200 omxvideodec: unref allocator after getting it from allocation query Otherwise a reference will be leaked for each allocator. It only happens when target platform is Raspberry Pi and when we have GL support. https://bugzilla.gnome.org/show_bug.cgi?id=751867